<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main2Activity"
    tools:showIn="@layout/activity_main2">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/title_page_style"
            android:text="@string/intro_one"
            android:textStyle="bold"
            android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_two" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_three" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_four" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_five" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_six" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_seven" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/title_page_style"
        android:text="@string/intro_eight" />

</LinearLayout>
</ScrollView>